# Foxcraft

./: CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkBatcher.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkMesher.hpp  Foxcraft.hpp  Foxcraft.kdev4  PackedVertex.hpp  main.cpp
resources/shaders/: FragmentShader.glsl  FragmentShaderLit.glslw  FragmentShader_vk.glsl  FragmentShader_vk.spv  FragmentShader_vk_array.glsl  FragmentShader_vk_array.spv  VertexShader.glsl  VertexShader_foxcraft.glsl  VertexShader_vk_array.glsl  VertexShader_vk_array.spv  VertexShader_vk_foxcraft.glsl  VertexShader_vk_foxcraft.spv
